update slideshow, map, team block,and clien

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="carousel-inner" role="listbox">
 
                     <div class="item active">
-                        <img src="img/slides.png">
+                        <img src="img/slideshow/slides.png">
                         <div class="carousel-caption">
                             <h3>Chania</h3>
                             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="img/slides.png">
+                        <img src="img/slideshow/slides2.png">
                         <div class="carousel-caption">
                             <h3>Chania</h3>
                             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -233,12 +233,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="team text-center">
-                        <img class="member-img" src="http://photos4.meetupstatic.com/photos/member/5/c/d/c/member_194663772.jpeg">
+                        <img class="member-img" src="img/team/Chan Chhorvy.jpg">
                         <div class="member-name">Chamreun Resmey</div>
                         <div class="member-description">
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
+                            Finance and Administration Manager.  Chhorvy has her Bachelor Degree in Finance and Banking and has worked as a translator since 2010.  Chhorvy also has experience translating medical terminology, social, media and education.  She loves building relationships with people.
                         </div>
                         <div>
                             <img class="facebook-icon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-128.png">
@@ -248,12 +246,11 @@
 
                 <div class="col-md-4">
                     <div class="team text-center">
-                        <img class="member-img" src="http://photos4.meetupstatic.com/photos/member/5/c/d/c/member_194663772.jpeg">
+                        <img class="member-img" src="img/team/Chamreun Raksmey.jpg">
                         <div class="member-name">Chamreun Resmey</div>
                         <div class="member-description">
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
+                            Founder/CEO.
+                            Raksmey has been translating/interpreting since 2008 in the area of social, religious, education, business, media, and marketing.  He also has experience in administrative and Human Resources.  Raksmey serves on a volunteer team YouVersion, a Bible app.
                         </div>
                         <div>
                             <img class="facebook-icon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-128.png">
@@ -263,12 +260,10 @@
 
                 <div class="col-md-4">
                     <div class="team text-center">
-                        <img class="member-img" src="http://photos4.meetupstatic.com/photos/member/5/c/d/c/member_194663772.jpeg">
+                        <img class="member-img" src="img/team/Thet Retkrong.jpg">
                         <div class="member-name">Chamreun Resmey</div>
                         <div class="member-description">
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
-                            AAAAAAAAAAAAAA
+                            Freelancer/Khmer Literature advisor.  Krong graduated with a Bachelors Degree in Economics and has been translating since 2010.  He has experience in Finance and Banking, religious, social, admin, politics, HR and media issues.
                         </div>
                         <div>
                             <img class="facebook-icon" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-128.png">
@@ -285,30 +280,140 @@
             <hr>
             <div>
                 <div class="owl-carousel owl-theme">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=1" data-src-retina="http://placehold.it/350x250&text=1-retina" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=2" data-src-retina="http://placehold.it/350x250&text=2-retina" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=3" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=4" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=5" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=6" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=7" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=8" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=9" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=10" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=11" alt="">
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/AIM.png"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/BBC Logo LetterHead small.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/CBSI.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/equip_registered_large.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/FoH.png"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/HOH Logo.png"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/horiz_logo_with_tag.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/IPCC.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/Island ECC.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/Island ECC 1.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/MI Logo.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
                 </div><br/>
                 <div class="owl-carousel owl-theme">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=1" data-src-retina="http://placehold.it/350x250&text=1-retina" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=2" data-src-retina="http://placehold.it/350x250&text=2-retina" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=3" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=4" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=5" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=6" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=7" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=8" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=9" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=10" alt="">
-                    <img class="owl-lazy" data-src="http://placehold.it/350x250&text=11" alt="">
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/NLF.gif"
+                        data-src-retina="http://placehold.it/350x250&text=1-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/Orphan-Secure.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/Pebbles and Stones.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/unnamed.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/vista-community-church-stack-274px.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/wecc.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/WV_logo.jpg"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="img/clients/YouVersion_logo_The-Bible-App_for-light.png"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="http://placehold.it/350x250&text=2"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="http://placehold.it/350x250&text=2"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
+                    <img
+                        class="owl-lazy"
+                        data-src="http://placehold.it/350x250&text=2"
+                        data-src-retina="http://placehold.it/350x250&text=2-retina"
+                        alt=""
+                    >
                 </div>
             </div>
         </div>
@@ -548,7 +653,7 @@
         <!-- start Map block -->
         <div class="container map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15635.838053259804!2d104.9264503!3d11.5547602!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x58aeffcf81b8be25!2sW.E.+Bridge+Technologies!5e0!3m2!1sen!2skh!4v1465110871137"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.098340318231!2d104.88653085093809!3d11.544802991762761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095054cf1efb75%3A0x53790363ca59ccb7!2sKairos+Translation+Service!5e0!3m2!1sen!2skh!4v1468060358319"
                 width="100%"
                 height="450"
                 frameborder="0"
